ajout de niveaux de difficulté dans Lecture_de_notes

--- a/pages/aide/aide.html
+++ b/pages/aide/aide.html
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="lien"><a href="/pages/aide/pages/musique/index_musique.html">musique</a></div>
     <div class="lien"><a href="/pages/aide/pages/programmation/index_programmation.html">programmation</a></div>
-    <div class="lien"><a href="">HTML/CSS</a></div>
+    <div class="lien"><a href="/pages/aide/pages/html_css_javascript/index.html">html/  css/  javascript</a></div>
     <div class="lien"><a href="">dessin</a></div>    
     <div class="lien"><a href="/index.html">retour</a></div>
     
