--- a/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/index.html
+++ b/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/index.html
@@ -3,34 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/style.css">
+    <link rel="stylesheet" href="/assets/style.css">
     <title>Cle de Fa</title>
 </head>
 <body>
-    <h1>Cle de Fa</h1>
-    <div>
-        <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/FaDo1.png" alt="">
-        <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/FaDo2.png" alt="">
-        <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/DoMiFa1.png" alt="">
-        <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/DoMiFa2.png" alt="">
-        <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/DoReMiFa1.png" alt="">
-        <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/DoReMiFa2.png" alt="">
-        <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/DoReMiFaSol1.png" alt="">
-        <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/DoReMiFaSol2.png" alt="">
-        <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/DoReMiFaSolLa1.png" alt="">
-        <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/DoReMiFaSolLa2.png" alt="">
-        <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/DoReMiFaSolLaSi1.png" alt="">
-        <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/DoReMiFaSolLaSi2.png" alt="">
-        <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/DoReMiFaSolLaSiDo1.png" alt="">
-        <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/DoReMiFaSolLaSiDo2.png" alt="">
-        <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/SiDoDo1.png" alt="">
-        <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/SiDoDo2.png" alt="">
-        <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/SiDoDoRe1.png" alt="">
-        <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/SiDoDoRe2.png" alt="">
-        <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/assets/img/SiDoDoReMi1.png" alt="">
-
-    </div>
-    <a href="/pages/aide/pages/musique/pages/solfege/index.html">retour</a>
-    
+    <h1>Cle de Fa</h1>    
+        <div class="container">
+            <div class="lien"><a href="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/niveau1.html">Niveau1</a></div>
+            <div class="lien"><a href="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/niveau2.html">Niveau2</a></div>
+            <div class="lien"><a href="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_fa/niveau3.html">niveau3</a></div>
+        </div>
+        <div class="footer">
+          <a href="/pages/aide/pages/musique/pages/solfege/index.html">retour</a>  
+        </div>    
 </body>
 </html>
