--- a/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/index.html
+++ b/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/index.html
@@ -3,60 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/style.css">
+    <link rel="stylesheet" href="/assets/style.css">
     <title>Cle de Sol</title>
 </head>
 <body>
     <h1>Cle de Sol</h1>
-    <div>
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SolDo1.png" alt="SolDo">    
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SolDo4.png" alt="SolDo2">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/DoMiSol1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/DoMiSol2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/DoReMiSol1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/DoReMiSol2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/DoReMiFaSol1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/DoReMiFaSol2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/DoReMiFaSolLa1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/DoReMiFaSolLa2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/DoReMiFaSolLaSi1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/DoReMiFaSolLaSi2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/DoReMiFaSolLaSiDo1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/DoReMiFaSolLaSiDo2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SiDoDo1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SiDoDo2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SiDoDoRe1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SiDoDoRe2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SiDoDoReMi1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SiDoDoReMi2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SiDoDoReMiFa1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SiDoDoReMiFa2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SiDoDoReMiFaSol1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SiDoDoReMiFaSol2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/LaSiDoSol1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/LaSiDoSol2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SolLaSiDoSol1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SolLaSiDoSol2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SolSolLa1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SolSolLa2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SolSolLaSi1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SolSolLaSi2.png" alt="">
-    <img class="Sol1" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SolSolLaSiDo1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/SolSolLaSiDo2.png" alt="">
-    <p>Lire progressivement de 44 à 72 à la ronde</p>
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/Final1.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/Final2.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/Final3_0001.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/Final3_0002.png" alt="">
-    <p>Révision des notes graves et aigues</p>
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/Final4.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/Final5_0001.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/Final5_0002.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/Final5_0003.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/Final5_0004.png" alt="">
-    <img class="Sol2" src="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/img/Final5_0005.png" alt="">
-</div>
+    <div class="container">
+    <div class="lien"><a href="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/niveau1.html">Niveau1</a></div>
+    <div class="lien"><a href="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/niveau2.html">Niveau2</a></div>
+    <div class="lien"><a href="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/niveau3.html">Niveau3</a></div>
+    <div class="lien"><a href="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/niveau4.html">Niveau4</a></div>
+    </div>
+    <div class="footer">
 <a href="/pages/aide/pages/musique/pages/solfege/index.html">retour</a>
+<a href="">ml</a>
+<a href="">po</a>
+
+    </div>
     
 </body>
 </html>
