debut aide html/css/javascript

--- a/pages/aide/pages/html_css_javascript/index.html
+++ b/pages/aide/pages/html_css_javascript/index.html
@@ -7,21 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aide Html/Css/Javascript</h1>
-    
-    <nav>        
-        <ol>
-            <li class="titre">Css</li>
-            <li class="titre2">disposition</li>            
-            <li><a href="">flexbox</a></li>
-            <li><a href="">grid</a></li>
-            <li><a href="">block</a></li>
-            <li><a href="">inline</a></li>
-        </ol>
-    </nav>
-</body>
-<footer>
-  <a href="/pages/aide/aide.html">retour</a>
-      <a href="/index.html">accueil</a>  
-</footer>
+    <div id="container">
+        <div class="header flexbox"><h1>Aide HTML/CSS/JAVASCRIPT</h1></div>
+        <div class="nav flexbox"><ul>
+            <li><a href="">positionnement</a></li>
+            <li><a href="">HTML</a></li>
+            <li><a href="">CSS</a></li>
+            <li><a href="">JAVASCRIPT</a></li>
+        </ul>
+        </div>
+        <div class="article flexbox">
+            <h1>positionnement:</h1>
+            <p>code html de base: Les 5 divs sont dans une div container :</p>
+            <img src="./assets/img/posi/base_html.png" alt="">
+        </div>
+        <div class="footer flexbox"><a href="">retour</a><span><a href="">accueil</a></span></div>
+    </div>
 </html>
