ajout pages references images/MAJ responsive general/ajout page code couleur

--- a/pages/aide/pages/musique/pages/exercices/index.html
+++ b/pages/aide/pages/musique/pages/exercices/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/clef_de_sol/assets/style.css">
-    <title>test_ecran</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>Exercices</title>
 </head>
 <body>
     <img class="Sol1" src="/pages/aide/pages/musique/pages/exercices/assets/img/BigBoss.png" alt="">
