--- a/pages/aide/aide.html
+++ b/pages/aide/aide.html
@@ -13,7 +13,7 @@
     <div class="lien"><a href="/pages/aide/pages/musique/index_musique.html">musique</a></div>
     <div class="lien"><a href="/pages/aide/pages/programmation/index_programmation.html">programmation</a></div>
     <div class="lien"><a href="/pages/aide/pages/html_css_javascript/index.html">html/  css/  javascript</a></div>
-    <div class="lien"><a href="">dessin</a></div>    
+    <div class="lien"><a href="/pages/aide/pages/dessin/index.html">dessin</a></div>    
     <div class="lien"><a href="/index.html">retour</a></div>
     
 </div>
