--- a/pages/aide/pages/musique/pages/partitions/index.html
+++ b/pages/aide/pages/musique/pages/partitions/index.html
@@ -14,7 +14,9 @@
         <div class="lien"><a href="/pages/aide/pages/musique/pages/partitions/pages/lia.html">lia</a></div>
         <div class="lien"><a href="/pages/aide/pages/musique/pages/partitions/pages/requiem_for_a_dream.html">requiem for a dream</a></div>
         <div class="lien"><a href="/pages/aide/pages/musique/pages/partitions/pages/green sleeves.html">green sleeves</a></div>
+        <div class="lien"><a href="/pages/aide/pages/musique/pages/partitions/pages/lilium.html">lilium</a></div>
         <div class="lien"><a href="/pages/aide/pages/musique/index_musique.html">retour</a></div>
+        
         <div class="lien"><a href="/index.html">accueil</a></div>
         
     </div>
