--- a/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/pages/cle_de_fa.html
+++ b/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/pages/cle_de_fa.html
@@ -23,7 +23,7 @@
                 <div class="bouton flexbox"><a href="/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/pages/sol.html"><img src="../assets/img/cle de fa/10.png" alt=""></a></div>
             </div>
         </div>
-        <div class="footer flexbox"><a class="retour" href="../index.html">retour</a><a class="accueil" href="">accueil</a></div>
+        <div class="footer flexbox"><a class="retour" href="../index.html">retour</a><a class="accueil" href="/index.html">accueil</a></div>
     </div>
     
 </body>
